--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">ExcoApp</string>
     <string name="o">O</string>
+    <string name="pregunta">Pregunta</string>
 </resources>
